  - enhancement: added support of number plan to customer type relations [chilan]
  - improvement: introduced smarty {user_selection} component [interduo]
  - enhancement: add assignment note field, user assignment description [interduo]
  - enhancement: added division filter in new message form [chilan]
  - enhancement: added office address, url and userpanel url properties to divisions [chilan]

version 27.0 (2021-08-20):

  - enhancement: require user selection in event(add/edit) forms,
    (variable: phpui.event_user_required, default: not set) [interduo]
  - enhancement: allow to choose identity type for customer [ravvar]
  - improvement: 'invoices.hide_ssn' support for debit notes [chilan]
  - improvement: introduce 'phpui.default_show_closed_events' config variable i.e. it allows
    to control events displaying in customer timetable [ravvar]
  - improvement: improvement: add support to scheduler form filter which allows
    display only events which are simultaneously assigned to many users [ravvar]
  - enhancement: add possibility to switch via button between timetable and scheduler
    with preserved filter settings [ravvar]
  - enhancement: allow to control period alignment for assignment bulk creation basing on promotion
    schema - 'phpui.default_assignment_align_periods' configuration variable control this mechanism
    ('true' by default to mimic previous behavior) [chilan]
  - improvement: 'invoices.customer_credentials_format' specifies userpanel credentials format
    presented on TCPDF invoices [chilan]
  - improvement: MD5 encrypted user password support - this allows to use password imported
    from external systems such as Pyxis4SQL [chilan]
  - improvement: add support for filtering events in timetable and schedule
    that are assigned to users which are deleted or have no access [ravvar]
  - improvement: change the management of assigned users in the event
    for disabled or deleted users [ravvar]